{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 520,
  "lineage": "1c5c3d83-53e4-25fd-efb4-b5122d3d255d",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "dev-kitchensink-alb-logs",
                "enabled": true,
                "prefix": "alb-logs"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:083732173806:loadbalancer/app/dev-kitchensink-alb/e8a50f1888beb3e9",
            "arn_suffix": "app/dev-kitchensink-alb/e8a50f1888beb3e9",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "dev-kitchensink-alb-1026065182.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:083732173806:loadbalancer/app/dev-kitchensink-alb/e8a50f1888beb3e9",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dev-kitchensink-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-00027e0e7585ad440"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00429f865c6afd576"
              },
              {
                "subnet_id": "subnet-06a62ce914b924cd2"
              },
              {
                "subnet_id": "subnet-0daa8b5476152a39d"
              }
            ],
            "subnets": [
              "subnet-00429f865c6afd576",
              "subnet-06a62ce914b924cd2",
              "subnet-0daa8b5476152a39d"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-kitchensink-alb"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-kitchensink-alb"
            },
            "vpc_id": "vpc-086d16f299b2721e5",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "module.alb.aws_s3_bucket.alb_logs",
            "module.alb.aws_security_group.alb",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:083732173806:listener/app/dev-kitchensink-alb/e8a50f1888beb3e9/44c086024458c619",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:083732173806:targetgroup/dev-kitchensink-tg/aefefaa3594f1f8e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:083732173806:listener/app/dev-kitchensink-alb/e8a50f1888beb3e9/44c086024458c619",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:083732173806:loadbalancer/app/dev-kitchensink-alb/e8a50f1888beb3e9",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Environment": "dev",
              "Name": "kitchensink-dev-listener"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "kitchensink-dev-listener"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.app",
            "module.alb.aws_lb_target_group.app",
            "module.alb.aws_s3_bucket.alb_logs",
            "module.alb.aws_security_group.alb",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:083732173806:targetgroup/dev-kitchensink-tg/aefefaa3594f1f8e",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:083732173806:listener-rule/app/dev-kitchensink-alb/e8a50f1888beb3e9/44c086024458c619/376c2d1cd0197459",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:083732173806:listener-rule/app/dev-kitchensink-alb/e8a50f1888beb3e9/44c086024458c619/376c2d1cd0197459",
            "listener_arn": "arn:aws:elasticloadbalancing:us-west-2:083732173806:listener/app/dev-kitchensink-alb/e8a50f1888beb3e9/44c086024458c619",
            "priority": 1,
            "tags": {
              "Environment": "dev",
              "Name": "dev-kitchensink-listener-rule"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-kitchensink-listener-rule"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.app",
            "module.alb.aws_lb_listener.app",
            "module.alb.aws_lb_target_group.app",
            "module.alb.aws_s3_bucket.alb_logs",
            "module.alb.aws_security_group.alb",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:083732173806:targetgroup/dev-kitchensink-tg/aefefaa3594f1f8e",
            "arn_suffix": "targetgroup/dev-kitchensink-tg/aefefaa3594f1f8e",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 60,
                "matcher": "200-499",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 30,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:083732173806:targetgroup/dev-kitchensink-tg/aefefaa3594f1f8e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-west-2:083732173806:loadbalancer/app/dev-kitchensink-alb/e8a50f1888beb3e9"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "dev-kitchensink-tg",
            "port": 8081,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-kitchensink-tg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-kitchensink-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-086d16f299b2721e5"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:083732173806:security-group/sg-00027e0e7585ad440",
            "description": "Security group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00027e0e7585ad440",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dev-kitchensink-alb-sg",
            "name_prefix": "",
            "owner_id": "083732173806",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "dev-kitchensink-alb-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-kitchensink-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-086d16f299b2721e5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.mongodb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mongodb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:083732173806:security-group/sg-0e7a0bffeb24f9acc",
            "description": "Security group for MongoDB Atlas private endpoint",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e7a0bffeb24f9acc",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.124.3.0/24",
                  "10.124.4.0/24",
                  "10.124.5.0/24"
                ],
                "description": "",
                "from_port": 1024,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1026
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 1024,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08ad138efa7095834"
                ],
                "self": false,
                "to_port": 1026
              }
            ],
            "name": "kitchensink-dev-mongodb-sg",
            "name_prefix": "",
            "owner_id": "083732173806",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "kitchensink-dev-mongodb-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "kitchensink-dev-mongodb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-086d16f299b2721e5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_security_group.app",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.mongodb",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "mongodb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:083732173806:vpc-endpoint/vpce-0925da6a5d34f607e",
            "dns_entry": [
              {
                "dns_name": "vpce-0925da6a5d34f607e-c2r23p1b.vpce-svc-05d04e90f7b43d643.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-0925da6a5d34f607e-c2r23p1b-us-west-2b.vpce-svc-05d04e90f7b43d643.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-0925da6a5d34f607e-c2r23p1b-us-west-2a.vpce-svc-05d04e90f7b43d643.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-0925da6a5d34f607e-c2r23p1b-us-west-2c.vpce-svc-05d04e90f7b43d643.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0925da6a5d34f607e",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-024dbd00f042e1aa2",
              "eni-05a41df9f62a573b1",
              "eni-07fdbc96e052e3a42"
            ],
            "owner_id": "083732173806",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0e7a0bffeb24f9acc"
            ],
            "service_name": "com.amazonaws.vpce.us-west-2.vpce-svc-05d04e90f7b43d643",
            "service_region": "us-west-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.124.3.67",
                "subnet_id": "subnet-070e0b3e8b541eae8"
              },
              {
                "ipv4": "10.124.4.63",
                "subnet_id": "subnet-0650f99232b7e1e55"
              },
              {
                "ipv4": "10.124.5.199",
                "subnet_id": "subnet-08af4d644c1093b7e"
              }
            ],
            "subnet_ids": [
              "subnet-0650f99232b7e1e55",
              "subnet-070e0b3e8b541eae8",
              "subnet-08af4d644c1093b7e"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-086d16f299b2721e5"
          },
          "dependencies": [
            "module.mongodb.aws_security_group.mongodb",
            "module.mongodb.mongodbatlas_privatelink_endpoint.main",
            "module.mongodb.mongodbatlas_project.main",
            "module.networking.aws_security_group.app",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09e16510f9fa38641",
            "arn": "arn:aws:ec2:us-west-2:083732173806:elastic-ip/eipalloc-09e16510f9fa38641",
            "association_id": "eipassoc-007c5818e0e82e100",
            "domain": "vpc",
            "id": "eipalloc-09e16510f9fa38641",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0ba96f2369f745787",
            "private_dns": "ip-10-124-0-81.us-west-2.compute.internal",
            "private_ip": "10.124.0.81",
            "public_dns": "ec2-54-190-79-192.us-west-2.compute.amazonaws.com",
            "public_ip": "54.190.79.192",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "kitchensink-dev-nat-eip"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "kitchensink-dev-nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:083732173806:internet-gateway/igw-0d450ef03a0c73266",
            "id": "igw-0d450ef03a0c73266",
            "owner_id": "083732173806",
            "tags": {
              "Environment": "dev",
              "Name": "dev-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-086d16f299b2721e5"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09e16510f9fa38641",
            "association_id": "eipassoc-007c5818e0e82e100",
            "connectivity_type": "public",
            "id": "nat-04002a5402d28a694",
            "network_interface_id": "eni-0ba96f2369f745787",
            "private_ip": "10.124.0.81",
            "public_ip": "54.190.79.192",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0daa8b5476152a39d",
            "tags": {
              "Environment": "dev",
              "Name": "kitchensink-dev-nat"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "kitchensink-dev-nat"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:083732173806:route-table/rtb-025580e4711d56c58",
            "id": "rtb-025580e4711d56c58",
            "owner_id": "083732173806",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04002a5402d28a694",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "kitchensink-dev-private-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "kitchensink-dev-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-086d16f299b2721e5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:083732173806:route-table/rtb-040f3c6a48b997ab1",
            "id": "rtb-040f3c6a48b997ab1",
            "owner_id": "083732173806",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d450ef03a0c73266",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-086d16f299b2721e5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03fa0cecabb309e6e",
            "route_table_id": "rtb-025580e4711d56c58",
            "subnet_id": "subnet-070e0b3e8b541eae8"
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bdf204f1ae7c81f8",
            "route_table_id": "rtb-025580e4711d56c58",
            "subnet_id": "subnet-0650f99232b7e1e55"
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0be4f36f8b20d7b76",
            "route_table_id": "rtb-025580e4711d56c58",
            "subnet_id": "subnet-08af4d644c1093b7e"
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b2e7f60b5e707ed",
            "route_table_id": "rtb-040f3c6a48b997ab1",
            "subnet_id": "subnet-0daa8b5476152a39d"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ccb8ea897e44c21d",
            "route_table_id": "rtb-040f3c6a48b997ab1",
            "subnet_id": "subnet-00429f865c6afd576"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04408066ab9db2e55",
            "route_table_id": "rtb-040f3c6a48b997ab1",
            "subnet_id": "subnet-06a62ce914b924cd2"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:083732173806:security-group/sg-08ad138efa7095834",
            "description": "Security group for application",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08ad138efa7095834",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              }
            ],
            "name": "dev-app-sg",
            "name_prefix": "",
            "owner_id": "083732173806",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "dev-app-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-086d16f299b2721e5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:083732173806:subnet/subnet-070e0b3e8b541eae8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.124.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-070e0b3e8b541eae8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "083732173806",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-private-subnet-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-private-subnet-1"
            },
            "vpc_id": "vpc-086d16f299b2721e5"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:083732173806:subnet/subnet-0650f99232b7e1e55",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.124.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0650f99232b7e1e55",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "083732173806",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-private-subnet-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-private-subnet-2"
            },
            "vpc_id": "vpc-086d16f299b2721e5"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:083732173806:subnet/subnet-08af4d644c1093b7e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.124.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08af4d644c1093b7e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "083732173806",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-private-subnet-3"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-private-subnet-3"
            },
            "vpc_id": "vpc-086d16f299b2721e5"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:083732173806:subnet/subnet-0daa8b5476152a39d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.124.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0daa8b5476152a39d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "083732173806",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-public-subnet-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-public-subnet-1"
            },
            "vpc_id": "vpc-086d16f299b2721e5"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:083732173806:subnet/subnet-00429f865c6afd576",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.124.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00429f865c6afd576",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "083732173806",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-public-subnet-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-public-subnet-2"
            },
            "vpc_id": "vpc-086d16f299b2721e5"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:083732173806:subnet/subnet-06a62ce914b924cd2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.124.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06a62ce914b924cd2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "083732173806",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-public-subnet-3"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-public-subnet-3"
            },
            "vpc_id": "vpc-086d16f299b2721e5"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:083732173806:vpc/vpc-086d16f299b2721e5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.124.0.0/16",
            "default_network_acl_id": "acl-003c82d1356f770b2",
            "default_route_table_id": "rtb-081458ceb17afc61d",
            "default_security_group_id": "sg-0925cc195eef34804",
            "dhcp_options_id": "dopt-5a63fa22",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-086d16f299b2721e5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-081458ceb17afc61d",
            "owner_id": "083732173806",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc"
            }
          }
        }
      ]
    }
  ]
}